Created partition method